Vinculación a hoja css
Se agrego la vinculación a la hoja css y se vincula a la hoja de JavaScript.

--- a/home.html
+++ b/home.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="css/home.css">
+</head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+  <h1 href="home.css">My First Heading</h1>
+  <p href="home.css">My first paragraph.</p>
+  <script src="js/home.js">
+  </script>
 </body>
 </html>
